Added .gitignore and README.md

--- a/FootballAnalytics.ipynb
+++ b/FootballAnalytics.ipynb
@@ -651,6 +651,7 @@
     }
    ],
    "source": [
+    "#Feature importance\n",
     "import pandas as pd\n",
     "\n",
     "imp = pd.Series(model.feature_importances_, index=features)\\\n",
@@ -688,11 +689,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "3c19b433-f29c-4f76-a043-7352e45b93f9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Export for tableau\n",
+    "df.to_csv(\"Data/Football_Tableau.csv\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
